@@ -1,3 +1,8 @@
+2006-08-06  Inge Wallin  <inge@lysator.liu.se>
+
+	Disable "First row/col as label in the data editor.
+	* kchartDataEditor.cc (kchartDataEditor): Disable checkboxes
+	
 2006-08-04  Inge Wallin  <inge@lysator.liu.se>
 
 	Let the Data Editor use icons for it's buttons.
